init version for smart contract.

--- a/plugins/AIDE/aide-0.16/testSelTree/testData/aide.conf
+++ b/plugins/AIDE/aide-0.16/testSelTree/testData/aide.conf
@@ -1,5 +1,6 @@
 
 database=file:/usr/local/etc/aideDB/aide.db
+database_new=file:/usr/local/etc/aideDB/aide.db.new
 database_out=file:/usr/local/etc/aideDB/aide.db.new
 
 SECCRoot = p+ftype+i+l+n+u+g+s+m+c+sha512
@@ -36,7 +37,7 @@ SECCFile_permission_user_group_time_size_content = p+ftype+u+g+m+c+s+sha512
 
 #!/folder_b
 #!/file_b
-!/file*
+#!/file*
 
 #/home/ray/.viminfo  SECCFile_permission_user_group
 #/home/ray/.bash_history SECCFile_permission_user_group
